fix css alignment and add navbar font

--- a/style/style.css
+++ b/style/style.css
@@ -23,21 +23,21 @@
 }
 
 .title{
-		margin: auto;
-		margin-top: 16px;
-		font-family: 'Cormorant Garamond', serif;
-		text-align: center;
-		width: 100%;
+	margin: auto;
+	margin-top: 16px;
+	font-family: 'Cormorant Garamond', serif;
+	text-align: center;
+	width: 100%;
 }
 
 
 .footer{
-		bottom:0px;
-		text-align: center;
-		width: 100%;
-	
+	bottom:0px;
+	text-align: center;
+	width: 100%;	
 }
 
 .navbar{
 	display: inline-block;
+	font-family: 'Cormorant Garamond', serif;
 }
